fixed overflow

--- a/src/components/OSFileExplorer/osfileexplorer.module.css
+++ b/src/components/OSFileExplorer/osfileexplorer.module.css
@@ -24,6 +24,7 @@
     margin-top: 5px;
     display: flex;
     flex-direction: row;
+    overflow: hidden;
 }
 
 .explorerIndex{
